src/test/ui/macros/macro-match-nonterminal.stderr
error: missing fragment specifier
  --> $DIR/macro-match-nonterminal.rs:2:8
   |
LL |     ($a, $b) => {
   |        ^

error: missing fragment specifier
  --> $DIR/macro-match-nonterminal.rs:2:10
   |
LL |     ($a, $b) => {
   |          ^^

error: aborting due to 2 previous errors

